opam-version: "1.2"
name: "wamp-yojson"
version: "1.2"
maintainer: "Vincent Bernardoff <vb@luminar.eu.org>"
authors: ["Vincent Bernardoff <vb@luminar.eu.org>"]
homepage: "https://github.com/vbmithr/ocaml-wamp"
license: "ISC"
dev-repo: "https://github.com/vbmithr/ocaml-wamp.git"
bug-reports: "https://github.com/vbmithr/ocaml-wamp/issues"
tags: []
available: [ ocaml-version >= "4.03.0" ]
depends: [
  "jbuilder" {build & >= "1.0+beta8"}
  "wamp" {= "1.2"}
  "yojson" {>= "1.6.0"}
]
build: [ "jbuilder" "build" "-j" jobs "-p" name "@install" ]
